<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/AccountMenu" android:title="@string/AccountMenu" android:icon="@drawable/user"/>
        <item android:id="@+id/HistoryMenu" android:title="@string/HistoryMenu" android:icon="@drawable/checked"/>
        <item android:id="@+id/leafMenu" android:title="@string/leafbottle" android:icon="@drawable/leaficon"/>
    </group>

    <item android:title="@string/specialMenu">
        <menu>
            <item android:id = "@+id/discountMenu" android:title="@string/worddiscountMenu" android:icon = "@drawable/discounticon"/>
            <item android:id = "@+id/specailActMenu" android:title="@string/specialActMenu" android:icon = "@drawable/calendaricon"/>
        </menu>
    </item>

</menu>