<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundmod"
    tools:context=".login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rock_salt"
        android:text="@string/loginEn"
        android:textAlignment="center"
        android:textColor="#465D4C"
        android:textSize="72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#80FFFFFF"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordAcc"
            android:textColor="#554236"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/hintAcc"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordPass"
            android:textColor="#554236"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/hintPass"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#80554236"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            android:text="@string/wordLogin" />

        <Button
            android:id="@+id/btLoginReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#80554236"
            android:text="@string/wordReg"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"/>

    </LinearLayout>

    <Button
        android:id="@+id/btForget"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:background="#00FFFFFF"
        android:layout_marginTop="20dp"
        android:text="@string/wordForget"
        android:textColor="#0044BB"
        android:textSize="14sp" />
</LinearLayout>