<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundmode"
    tools:context=".mode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordMode"
            android:textAlignment="center"
            android:textColor="#554236"
            android:layout_marginBottom="5dp"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tgbtModePerson"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/personaltoggle"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/tgbtModeStranger"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/strangertoggle"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/tgbtModeGroup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/grouptoggle"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:text="@string/wordGender"
            android:textColor="#554236"
            android:textSize="18sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tgbtGenderMan"
                android:layout_width="wrap_content"
                android:layout_height="113dp"
                android:layout_weight="1"
                android:background="@drawable/mantoggle"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn=""
                android:visibility="invisible" />

            <ToggleButton
                android:id="@+id/tgbtGenderWoman"
                android:layout_width="wrap_content"
                android:layout_height="113dp"
                android:layout_weight="1"
                android:background="@drawable/womantoggle"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn=""
                android:visibility="invisible" />

            <ToggleButton
                android:id="@+id/tgbtGenderMix"
                android:layout_width="wrap_content"
                android:layout_height="113dp"
                android:layout_weight="1"
                android:background="@drawable/mixtoggle"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn=""
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordAge"
            android:textColor="#554236"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dialog"
            android:visibility="invisible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCareerOrType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#554236"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/CareerOrTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dialog"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/btChooseTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#80FFFFFF"
        android:text="@string/wordChooseTrip"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textAlignment="center" />

</LinearLayout>